--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
-    <title>Mudança de Imagens ( sistema solar )</title>
+    <title>Mudança de Imagens ( Hollow Knight )</title>
 </head>
 <body>
     
     <div class="container">
+        <input type="text" id="img" placeholder="Digite uma Imagem">
         <button id="trocar-img">Trocar Imagem</button>
     </div>
 
