--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="container">
-        <input type="text" id="img" placeholder="Digite uma Imagem ( 1 a 9 )">
+        <input type="text" id="img" placeholder="Imagem ( 1 a 9 )">
         <button id="trocar-img">Trocar Imagem</button>
     </div>
 
